--- a/style.css
+++ b/style.css
@@ -7,15 +7,23 @@
 .container {
 	background-color: pink;
 	display: flex;
-	flex-wrap: wrap;
-	width: 640px;
+	flex-direction: column;
+	width: 700px;
+	height: 700px;
 	margin: auto;
-	margin-top: 40px;
+}
+
+.line {
+	flex-grow: 1;
+	display: flex;
+	height: 10px;
+}
+
+.noOfSq {
+	margin: auto;
 }
 
 .block {
-	height: 40px;
-	width: 40px;
+	flex-grow: 1;
 	border: 1px solid black;
-	/* margin: 5px; */
 }
