--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
 	box-sizing: border-box;
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+}
+
 .container {
 	background-color: pink;
 	display: flex;
@@ -20,7 +25,15 @@
 }
 
 .noOfSq {
+	background-color: violet;
+	font-size: 12px;
+	border-radius: 10px;
+	padding: 10px;
+	width: 200px;
 	margin: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+
 }
 
 .block {
