--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-	background-color: pink;
+	background-color: rgb(255, 184, 255);
 	display: flex;
 	flex-direction: column;
 	width: 700px;
